[package]
name = "capped_collections"
version = "0.2.0-alpha"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Collections with compile-time set capacities."
repository = "https://github.com/coruscateor/capped_collections"
homepage = "https://coruscateor.com/projects/capped_collections"
keywords = ["capped", "stack", "collection", "array", "capacity"]
categories = ["memory-management"]

[dependencies]
serde = { version = "1.0.219", optional = true }

#Disabled

#corlib = "0.4.1"

inc_dec = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

